src/snapshots/afrotd__parser__tests__interpretation_6.3.1_3.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 6
  - 3
  - 1
index: 3
text: "Der Scrimmage Kick überquert nicht die neutrale Zone, als B1\ndurch A1 bei der Möglichkeit, einen Kick zu fangen, behindert wird."
ruling: "Die Behinderung der Möglichkeit, einen Kick zu fangen, trifft\nnicht zu und alle Spieler sind berechtigt, den Ball zu berühren, zu recovern oder zu advancen. Daher dürfen alle Spieler einen Gegner bei dem\ntatsächlichen Versuch, an den Ball zu gelangen, legal wegdrücken (Regel 9.3.5); aber kein Spieler darf einen Gegner festhalten, damit dieser\nnicht an den Ball oder damit ein Mitspieler an den Ball gelangen kann\n(Regeln 9.1.5 Ausnahme 3)."
