src/snapshots/afrotd__parser__tests__interpretation_6.3.1_4.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 6
  - 3
  - 1
index: 4
text: "Team A’s Punt, von hinter seiner eigenen Goalline aus, überquert die neutrale Zone ins Spielfeld, berührt einen Team B-Spieler und\nprallt zurück hinter Team A’s Goalline, wo A32 den Ball recovert."
ruling: "Safety (Regeln 6.3.3, 9.1.3 und 8.5.1.a)."
