src/snapshots/afrotd__parser__tests__interpretation_6.3.2_2.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 6
  - 3
  - 2
index: 2
text: "Während eines Scrimmage Kicks begeht A1 eine Violation, wonach B1 den Ball recovert, advanct und fumbelt. A2 recovert den Fumble, und während er den Ball advanct, hält, trippt oder schlägt B2."
ruling: "Team A kann den Ball dort übernehmen, wohin ihn die Strafe\nfür Team B’s Foul bringt; aber wenn Team A die Strafe ablehnt, kann\nTeam B wählen, den Ball an der Stelle der illegalen Berührung durch\nTeam A zu übernehmen. Liegt eine Flagge für das Schlagen, wird B2\ndisqualifiziert."
