src/snapshots/afrotd__parser__tests__interpretation_6.3.2_3.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 6
  - 3
  - 2
index: 3
text: "Team A’s Punt überquert die neutrale Zone und wird zuerst von\nA80 berührt. Danach recovert B40 den Ball, advanct 5 Meter und fumbelt. A20 recovert den Fumble und erzielt einen Touchdown. Während\nA20’s Lauf hielt B70 einen Gegenspieler fest."
ruling: "Die Punkte\nzählen nicht. 5- und 10-Meterstrafen werden nicht auf den Try oder\nden anschließenden Kickoff übertragen. Die Strafe für Team B’s Foul\nwird gemäß den Regeln aufgehoben, weil es keinen Enforcement Spot\ngibt. Der Ball gehört Team B am Punkt der illegalen Berührung (Regel\n10.2.5.a.2)."
